Desarrollo de soluciones, cambios en el diseño y refactorización de código